Added image optimizer

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 
 /optimized_v2/
 /archive/
+/original_v2.tar.gz
+/optimized_v3.tar.gz
+/compressed-webp-20.webp
+/optimized_v3/
+/compressed_img.tar.gz
